2016-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Correct package URL

2016-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.8

	* src/DateExample.cpp (DateExample): Rewritten taking advantage of
	Rcpp 0.12.8 features and 'new' date(time) vectors

	* src/Makevars (PKG_CXXFLAGS): Turning of new datetime vectors via
	#define while they are still being phased in by Rcpp
	* src/Makevars.win: Ditto

	* R/RcppDateExample.R (RcppDateExample): Setting and resetting
	digits.secs option

	* README.md: Use canonical URLs

	* .travis.yml: Switch to using run.sh for Travis CI

2016-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (BugReports): Added BugReports: URL

2016-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): New version 0.1.7

	* DESCRIPTION: Refreshed with minor edits

	* DESCRIPTION: Import: rather than Depends: on Rcpp
	* NAMESPACE: Idem

	* README.md: Added a short README

	* src/*: Edited and updated adding 'const &' in several interfaces
	* R/*: Edited and Updated
	* man/*: Edited and Updated with a few minor corrections

2016-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added to support Travis CI
	* .Rbuildignore: Added

2013-09-17  Romain Francois <romain@r-enthusiasts.com>

	* R/*: Updated to reflect newer Rcpp features
	* src/*: Idem
	* man/*: Corresponding documentation

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): New version 0.1.6

	* DESCRIPTION (Description): Mention http://gallery.rcpp.org
	* man/RcppExamples-package.Rd: Idem

	* inst/NEWS.Rd: Moved from directory above per CRAN request

2012-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): New version 0.1.5

	* DESCRIPTION (Depends, Imports): No longer use RcppClassic
	* NAMESPACE: Updated accordingly

	* R/RcppDateExample.R (RcppDateExample): No longer call 'classic'
	example moved to new package RcppClassicExamples